code/style.css
/*font-family: 'Montserrat', sans-serif;
font-family: 'Roboto', sans-serif;*/

* {
    margin: 0;
    padding: 0;
}

/***** MOBILE *******/
.top {
    width: 100vw;
    background-image: url('./assets/ashim-d-silva-WeYamle9fDM-unsplash.jpg');
    background-repeat: no-repeat;
    background-size: cover; 
    display: flex;
    flex-direction: column;
}

.header-wrapper {
    width: 80%;
    margin: 0 auto;
    padding-top: 2rem;
    display: flex;
    flex-direction: column;
}

.header-links {
    align-self: flex-end;
    margin-bottom: 2.5rem;
}

.portfolio {
    align-self: flex-start;
    font-family: 'Montserrat';
    font-weight: 700;
    display: block;
    margin-bottom: 2.5rem;
}

.portfolio p {
    font-family: 'Roboto';
    font-size: 14px;
    font-weight: 400;
    line-height: 18px;
    letter-spacing: 0.04em;
}

h1 {
    font-size: 40px;
    line-height: 49px;
    max-width: 400px;
}
.with-h1 {
    font-size: 24px;
    line-height: 40px;
}

.profile {
    align-self: flex-end;
}

.profile-image {
    width: 180px;
    height: 200px;
    border-radius: 50%;
    border: 2px solid whitesmoke;
    overflow: hidden;
    position: relative;
    top: 2rem;
}

.icon-white {
    width: 40px;
    height: 40px;
    padding: 0.1rem;
}
.icon-red {
    width: 45px;
    height: 45px;
    padding: 0.8rem;
}

.start-image {
    width: 55px;
}

.outer-wrapper {
    background-color: white;
    text-align: center;
}

.inner-wrapper {
    width: 80%;
    margin: 0 auto;
    padding-bottom: 2.5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.grey {
    background-color: #f4f4f4;
}

.orange {
    color: #F66F19;
}

.white {
    color: white;
}

.summary {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 17px;
    line-height: 29px;
    padding: 2.5rem;
    display: block;
}

.large-headline {
    font-family: 'Montserrat';
    font-weight: 700;
    font-size: 22px;
    line-height: 27px;
    margin: 2.5rem 0;
    background-color: #F66F19;
    padding: 2px;
    border-radius: 5px;
    display: inline-block;
    width: fit-content;
    text-align: center;
}

.medium-headline {
    font-family: 'Montserrat';
    font-weight: 700;
    font-size: 21px;
    line-height: 25px;
    margin: 2.5rem 0;
}

.small-headline {
    font-family: 'Roboto';
    font-weight: 700;
    font-size: 17px;
    line-height: 29px;
    color: #F66F19;
}

.image-card {
    margin-bottom: 2rem;
}

.project-image-container {
    width: 100%;
    position: relative;
    /* This transition will cause the text to fade */
    transition: 0.5s ease;
}
.project-image {
    width: 100%;
}

.project-image-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    /* This is a semi-transparent overlay on the image */
    background-color: rgba(0, 0, 0, 0.5);
    /* This will cause the overlay to fade */
    transition: 0.5s ease;
}
.project-image-title {
    text-align: center;
    position: absolute;
    top: 33%;
    left: 25%;
    right: 26%;
    color: white;
    font-size: 24px;
    font-weight: 700;
}

.tech-tools {
    margin-top: 0.5rem;
    display: flex;
    flex-wrap: wrap;
}

.tool {
    background-color: #8ECEDC;
    margin-right: 0.25rem;
    margin-bottom: 0.25rem;
    padding: 3px;
    font-family: 'Roboto';
    border-radius: 5px;
}

.other-project {
    width: 100%;
    margin-bottom: 2rem;
}

.highlight {
    text-align: left;
    color: #F66F19;
}

.bold {
    font-weight: 700;
}

a {
    text-decoration: none;
    font-family: 'Roboto';
    font-weight: 400;
    letter-spacing: 0.01em;
    text-align: left;
    cursor: pointer;
}

.list-container {
    width: 80%;
    margin: 0 auto;
    padding-bottom: 2.5rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

ul {
    font-family: 'Roboto';
    font-weight: 400;
    font-size: 16px;
    line-height: 29px;
    list-style-type: none;
    padding-bottom: 2.5rem;
}

.footer-links {
    display: flex;
    justify-content: center;
    padding-bottom: 2.5rem;
}

small {
    font-size: x-small;
}

footer {
    display: flex;
    flex-direction: column;
    background-color: #5A415A;
    color: white;
    width: 100vw;
    text-align: center;
    padding: 1rem 0;
}

footer p {
    font-family: "Montserrat";
    font-size: 18px;
    color: #fff;
    margin: 6px;
    line-height: 25px;
}

/* example of ARIA styling: 
div.tooltip[aria-hidden="true"] {
    display: none;
}*/
  
/* TABLET & DESKTOP STYLING */
@media (min-width: 668px) /*and (max-width:1024px)*/ {
    .portfolio p {
        font-size: 28px;
        line-height: 37px;
        letter-spacing: 0.04em;
    }

    h1 {
        font-size: 80px;
        line-height: 90px;
    }
    .with-h1 {
        font-size: 40px;
        line-height: 70px;
    }

    .profile-image {
        width: 300px;
        height: 320px;
    }

    .icon-white {
        width: 80px;
        height: 80px;
    }

    .icon-red {
        width: 90px;
        height: 90px;
        padding: 1rem;
    }

    .start-image {
        width: 98px;
    }

    .inner-wrapper {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .summary, footer p {
        font-size: 28px;
        line-height: 50px;
    }
    
    .large-headline {
        font-size: 40px;
        line-height: 50px;
        margin: 5rem 0;
    }

    .medium-headline {
        font-size: 35px;
        line-height: 47px;
    }
    
    .small-headline, p, li, h4 {
        font-size: 25px;
        line-height: 41px;
    }
    
    .image-card {
        width: 45%;
        height: 80%;
    }

    .project-image-title {
        font-size: 30px;
    }
    
    .tool {
        font-size: larger;
    }
    
}

/* DESKTOP */
@media (min-width: 1025px) {
    .profile-image {
        width: 330px;
        height: 350px;
    }
   
    .project-image:hover {
        /* This causes the text to fade, color is the text color */
        color: transparent;
    }
      
    .project-image-overlay:hover {
        /* This causes the original background color (.5 opacity) to become transparent */
        background-color: transparent;
    }

    .icon-red:hover, .icon-white:hover  {
        transform: scale(1.1);
    }
}

